syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.android.platform";
option java_outer_classname = "LevelProto";

package level;

service Level {
	rpc GetLevels (LevelsRequest) returns (LevelsReply);
	rpc GetLessons (LessonsRequest) returns (LessonsReply);
	rpc GetAwards (AwardsRequest) returns (AwardsReply);
	rpc SaveUserAward (SaveUserAwardRequest) returns (SaveUserAwardReply);
}

message LevelsRequest{
}

message LevelsReply{
	repeated LevelModel levels = 1;
}

message LevelModel{
	int32 levelId = 1;
	string title = 2;
	int32 timeInSum = 3;
	int32 progress = 4;
}

message AwardsRequest{}

message AwardsReply {
	repeated AwardModel awards = 1;
}

message AwardModel {
	int32 awardId = 1;
	string title = 2;
	int32 score = 3;
	string video = 4;
	string image = 5;
	bool accomplished = 6;
}

message SaveUserAwardRequest{
	int32 awardId = 1;
}

message SaveUserAwardReply{}

message LessonsRequest{
	int32 levelId = 1;
}
message LessonsReply{
	string levelTitle = 1;
	string levelImage = 2;
	string levelVideo = 3;
	repeated LessonModel lessons = 4;
}

message LessonModel{
	int32 lessonId = 1;
	string title = 2;
}
